feat(app): Refactoring
Add index.ts for actions and reducers to facilitate imports
Simplify actions (remove combining all actions$)
Rename Request to HttpJson to avoid conflict
Add a dumb person-item component

--- a/client/scripts/app/components/person-list/person-list.component.html
+++ b/client/scripts/app/components/person-list/person-list.component.html
@@ -1,9 +1,9 @@
 <ul>
 
-    <input type="text" [(ngModel)]="currentPerson.firstname">
-    <input type="text" [(ngModel)]="currentPerson.lastname">
+    <input type="text" [(ngModel)]="currentPerson.firstname" placeholder="First name">
+    <input type="text" [(ngModel)]="currentPerson.lastname" placeholder="Last name">
     <button (click)="add(currentPerson)">Create</button>
-    <li *ngFor="#person of persons | async">[{{person.id}}] - {{person.firstname}} {{person.lastname}}
-        <button (click)="delete(person)">Delete</button>
-    </li>
+    <button (click)="reload()">Reload</button>
+
+    <person-item *ngFor="#person of persons | async" [person]="person" (delete)="delete($event)"></person-item>
 </ul>
