feat(app): Implement a big table component

--- a/client/scripts/app/components/main/main.component.html
+++ b/client/scripts/app/components/main/main.component.html
@@ -1,7 +1,8 @@
 <div>
+    <h1>Big table</h1>
+    <big-table></big-table>
 
     <h1>Counter</h1>
-
     <counter></counter>
 
     <h1>Person List</h1>
