feat(app): Fix perf issue

--- a/client/scripts/app/components/main/main.component.html
+++ b/client/scripts/app/components/main/main.component.html
@@ -1,6 +1,6 @@
 <div>
     <h1>Big table</h1>
-    <big-table></big-table>
+    <big-table-container></big-table-container>
 
     <h1>Counter</h1>
     <counter></counter>
