--- a/client/scripts/app/components/big-table/big-table.component.html
+++ b/client/scripts/app/components/big-table/big-table.component.html
@@ -1,16 +1,16 @@
 <form>
     <strong>Filter Data</strong>:
-    <input type="text" [value]="form.filter" (input)="handleFilterChange( $event.target.value ); form.filter=$event.target.value" />
-    <span *ngIf="form.filter">
+    <input type="text" [value]="grid.filter" (input)="filter.emit($event.target.value)" />
+    <span *ngIf="grid.filter">
         &mdash; Filtering
-        <strong>{{ form.filter }}</strong>
-        over {{ dataPoints | async}} data points, {{ visibleCount }} found.
+        <strong>{{ grid.filter }}</strong>
+        over {{ dataPoints }} data points, {{ visibleCount }} found.
     </span>
-    <a *ngIf="(grid | async).length" (click)="unmountGrid()">Unmount Grid</a>
-    <a *ngIf="! (grid| async).length" (click)="remountGrid()">Remount Grid</a>
+    <a *ngIf="grid && grid.data.length" (click)="unmount.emit()">Unmount Grid</a>
+    <a *ngIf="!(grid && grid.data.length)" (click)="mount.emit()">Remount Grid</a>
 </form>
-<table width="100%" cellspacing="2" [class.filtered]="form.filter">
-    <tr *ngFor="#row of grid | async">
+<table width="100%" cellspacing="2" [class.filtered]="grid.filter">
+    <tr *ngFor="#row of grid.data">
         <td>
             {{ row.id }}
         </td>
